deleting edges did not work, because "Selection" instead of "o" was compared and casted to "Edge"

--- a/GrALoG FX/nbproject/project.properties
+++ b/GrALoG FX/nbproject/project.properties
@@ -29,15 +29,13 @@ dist.jar=${dist.dir}/GrALoG FX.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jgrapht-ext-0.9.1-uber.jar=lib/jgrapht-ext-0.9.1-uber.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${reference.GrALoG_Core.jar}:\
-    ${file.reference.jgrapht-ext-0.9.1-uber.jar}
+    ${reference.GrALoG_Core.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
