removed some user-specific files from repository, spring embedder can be configured now

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 
+# netbeans
 */dist/
 */build/
+*/nbproject/private/*
 
 # OS-specific files (add lines accordingly)
-
 # Linux + KDE
 .directory
 
