--- a/GrALoG FX/build.xml
+++ b/GrALoG FX/build.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><!-- You may freely edit this file. See commented blocks below for --><!-- some examples of how to customize the build. --><!-- (If you delete it and reopen the project it will be recreated.) --><!-- By default, only the Clean and Build commands use this build script. --><project name="GrALoG_FX" default="default" basedir="." xmlns:fx="javafx:com.sun.javafx.tools.ant">
     <description>Builds, tests, and runs the project GrALoG FX.</description>
     <import file="nbproject/build-impl.xml"/>
+    <target depends="-jfx-copylibs,-rebase-libs,jfx-deployment" name="-post-jar">
+        <copy file="src/gralog/gralogfx/config.xml" todir="${dist.dir}"/>
+    </target> 
+    
     <!--
 
     There exist several targets which are by default empty and which can be 
