Added Parser for First-Order Logic (no semantics yet)

--- a/SamplePlugin/nbproject/project.properties
+++ b/SamplePlugin/nbproject/project.properties
@@ -29,12 +29,12 @@ dist.jar=${dist.dir}/SamplePlugin.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.com.microsoft.z3.jar=F:\\z3-4.4.1-x64-win\\z3-4.4.1-x64-win\\bin\\com.microsoft.z3.jar
+file.reference.java-cup-11b-runtime.jar=lib/java-cup-11b-runtime.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.GrALoG_Core.jar}:\
-    ${file.reference.com.microsoft.z3.jar}
+    ${file.reference.java-cup-11b-runtime.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
