recompiled all jflex and cup files. an error in the FO parser emerged: the namespaces had been changed in the .java files instead of the cup and jflex files

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 */build/
 */nbproject/private/*
 
+# jflex backups
+*.java~
+
 # OS-specific files (add lines accordingly)
 # Linux + KDE
 .directory
