Tree Decomposition of First Order Logic added

--- a/GrALoG First Order Logic/nbproject/project.properties
+++ b/GrALoG First Order Logic/nbproject/project.properties
@@ -29,12 +29,14 @@ dist.jar=${dist.dir}/GrALoG_First_Order_Logic.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.GrALoG_FX.jar=../GrALoG FX/dist/GrALoG FX.jar
 file.reference.java-cup-11b-runtime.jar=lib/java-cup-11b-runtime.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.GrALoG_Core.jar}:\
-    ${file.reference.java-cup-11b-runtime.jar}
+    ${file.reference.java-cup-11b-runtime.jar}:\
+    ${file.reference.GrALoG_FX.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
