--- a/GrALoG First Order Logic/nbproject/project.properties
+++ b/GrALoG First Order Logic/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/GrALoG_First_Order_Logic.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.GrALoG_Finite_Game.jar=../GrALoG Finite Game/dist/GrALoG_Finite_Game.jar
 file.reference.GrALoG_FX.jar=../GrALoG FX/dist/GrALoG FX.jar
 file.reference.java-cup-11b-runtime.jar=lib/java-cup-11b-runtime.jar
 includes=**
@@ -36,7 +37,8 @@ jar.compress=false
 javac.classpath=\
     ${reference.GrALoG_Core.jar}:\
     ${file.reference.java-cup-11b-runtime.jar}:\
-    ${file.reference.GrALoG_FX.jar}
+    ${file.reference.GrALoG_FX.jar}:\
+    ${file.reference.GrALoG_Finite_Game.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
