-added manual to first order prover -added equality relation in parser

--- a/GrALoG First Order Logic/nbproject/project.properties
+++ b/GrALoG First Order Logic/nbproject/project.properties
@@ -33,7 +33,9 @@ file.reference.GrALoG_Finite_Game.jar=../GrALoG Finite Game/dist/GrALoG_Finite_G
 file.reference.GrALoG_FX.jar=../GrALoG FX/dist/GrALoG FX.jar
 file.reference.java-cup-11b-runtime.jar=lib/java-cup-11b-runtime.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${reference.GrALoG_Core.jar}:\
     ${file.reference.java-cup-11b-runtime.jar}:\
@@ -42,6 +44,7 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -62,6 +65,20 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
+main.class=gralog.firstorderlogic.algorithm.Coloring
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
