--- a/GrALoG FX/nbproject/project.properties
+++ b/GrALoG FX/nbproject/project.properties
@@ -35,12 +35,13 @@ includes=**
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}:\
     ${reference.GrALoG_Core.jar}:\
-    ${file.reference.GrALoG_Finite_Game.jar}
+    ${file.reference.GrALoG_Finite_Game.jar}:\
+    ${javafx.classpath.extension}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -64,9 +65,9 @@ javadoc.windowtitle=
 javafx.application.implementation.version=1.0
 javafx.binarycss=false
 javafx.classpath.extension=\
-    ${java.home}/lib/javaws.jar:\
-    ${java.home}/lib/deploy.jar:\
-    ${java.home}/lib/plugin.jar
+    ${platforms.JDK_1.8.home}/jre/lib/javaws.jar:\
+    ${platforms.JDK_1.8.home}/jre/lib/deploy.jar:\
+    ${platforms.JDK_1.8.home}/jre/lib/plugin.jar
 javafx.deploy.adddesktopshortcut=false
 javafx.deploy.addstartmenushortcut=false
 javafx.deploy.allowoffline=true
@@ -112,7 +113,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 native.bundling.enabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 project.GrALoG_Core=../GrALoG Core
 reference.GrALoG_Core.jar=${project.GrALoG_Core}/dist/GrALoG_Core.jar
 run.classpath=\
