--- a/GrALoG FX/nbproject/project.properties
+++ b/GrALoG FX/nbproject/project.properties
@@ -4,7 +4,8 @@ annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=GrALoG FX
-application.vendor=viktor
+application.vendor=
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -65,9 +66,9 @@ javadoc.windowtitle=
 javafx.application.implementation.version=1.0
 javafx.binarycss=false
 javafx.classpath.extension=\
-    ${platforms.JDK_1.8.home}/jre/lib/javaws.jar:\
-    ${platforms.JDK_1.8.home}/jre/lib/deploy.jar:\
-    ${platforms.JDK_1.8.home}/jre/lib/plugin.jar
+    ${java.home}/lib/javaws.jar:\
+    ${java.home}/lib/deploy.jar:\
+    ${java.home}/lib/plugin.jar
 javafx.deploy.adddesktopshortcut=false
 javafx.deploy.addstartmenushortcut=false
 javafx.deploy.allowoffline=true
@@ -113,7 +114,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 native.bundling.enabled=false
-platform.active=JDK_1.8
+platform.active=default_platform
 project.GrALoG_Core=../GrALoG Core
 reference.GrALoG_Core.jar=${project.GrALoG_Core}/dist/GrALoG_Core.jar
 run.classpath=\
