Update references to other gralog libs

--- a/GrALoG FX/nbproject/project.properties
+++ b/GrALoG FX/nbproject/project.properties
@@ -30,15 +30,14 @@ dist.jar=${dist.dir}/GrALoG FX.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.GrALoG_Finite_Game.jar=../GrALoG Finite Game/dist/GrALoG_Finite_Game.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${reference.GrALoG_Core.jar}:\
-    ${file.reference.GrALoG_Finite_Game.jar}:\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${reference.GrALoG_Finite_Game.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -116,7 +115,9 @@ mkdist.disabled=false
 native.bundling.enabled=false
 platform.active=default_platform
 project.GrALoG_Core=../GrALoG Core
+project.GrALoG_Finite_Game=../GrALoG Finite Game
 reference.GrALoG_Core.jar=${project.GrALoG_Core}/dist/GrALoG_Core.jar
+reference.GrALoG_Finite_Game.jar=${project.GrALoG_Finite_Game}/dist/GrALoG_Finite_Game.jar
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
