--- a/GrALoG First Order Logic/nbproject/project.properties
+++ b/GrALoG First Order Logic/nbproject/project.properties
@@ -29,18 +29,16 @@ dist.jar=${dist.dir}/GrALoG_First_Order_Logic.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.GrALoG_Finite_Game.jar=../GrALoG Finite Game/dist/GrALoG_Finite_Game.jar
-file.reference.GrALoG_FX.jar=../GrALoG FX/dist/GrALoG FX.jar
 file.reference.java-cup-11b-runtime.jar=lib/java-cup-11b-runtime.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${reference.GrALoG_Core.jar}:\
     ${file.reference.java-cup-11b-runtime.jar}:\
-    ${file.reference.GrALoG_FX.jar}:\
-    ${file.reference.GrALoG_Finite_Game.jar}
+    ${reference.GrALoG_Finite_Game.jar}:\
+    ${reference.GrALoG_FX.jar}:\
+    ${reference.GrALoG_Core.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -83,7 +81,11 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
 project.GrALoG_Core=../GrALoG Core
+project.GrALoG_Finite_Game=../GrALoG Finite Game
+project.GrALoG_FX=../GrALoG FX
 reference.GrALoG_Core.jar=${project.GrALoG_Core}/dist/GrALoG_Core.jar
+reference.GrALoG_Finite_Game.jar=${project.GrALoG_Finite_Game}/dist/GrALoG_Finite_Game.jar
+reference.GrALoG_FX.jar=${project.GrALoG_FX}/dist/GrALoG FX.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
