--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,17 @@ allprojects {
     compile.extendsFrom gralog
   }
 
+  configurations {
+    javaCup
+    jflex
+  }
+  dependencies {
+    javaCup 'com.github.vbmacher:java-cup:11b-20160615'
+    jflex 'de.jflex:jflex:1.6.1'
+  }
+  ant.taskdef(classname: 'java_cup.anttask.CUPTask', name: 'cup', classpath: configurations.javaCup.asPath)
+  ant.taskdef(classname: 'jflex.anttask.JFlexTask', name: 'flex', classpath: configurations.jflex.asPath)
+
   dependencies {
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'junit:junit:4.12'
@@ -69,6 +80,11 @@ project(':gralog-first-order-logic') {
     gralog project(':gralog-core')
     compile 'com.github.vbmacher:java-cup-runtime:11b'
   }
+  task parser(type: CupJFlex) {
+    workingDir = 'gralog/firstorderlogic/logic/firstorder/parser'
+    baseName = 'FirstOrder'
+  }
+  jar.dependsOn(parser)
 }
 
 project(':gralog-modal-logic') {
@@ -100,7 +116,6 @@ project(':JGraphTBridge') {
     compile 'org.jgrapht:jgrapht-core:0.9.2'
   }
 }
-
 
 // Let the subproject jars explicitly depend on their dependencies.
 subprojects {
@@ -146,3 +161,21 @@ subprojects {
 }
 
 test.dependsOn(subprojects.test)
+
+class CupJFlex extends DefaultTask {
+    String workingDir
+    String baseName;
+
+    @TaskAction
+    def runCupJFlex() {
+      def parserFile = baseName + 'Parser'
+      def scannerTokenFile = baseName + 'ScannerToken'
+      def jflexFile = baseName + 'Scanner.jflex'
+      ant.cup(
+        srcfile: [ project.file('src/main/java'), workingDir, parserFile + '.cup' ].join('/'),
+        destdir: project.file('src/main/java'),
+        parser: parserFile,
+        symbols: scannerTokenFile)
+      ant.flex(file: [ project.file('src/main/java'), workingDir, jflexFile ].join('/'))
+    }
+}
