Apply the java plugin for the root project
Without this, netbeans cannot report the results of running all tests.

--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 defaultTasks 'run'
 
+apply plugin: 'java'
+
 subprojects {
   repositories { mavenCentral() }
   apply plugin: 'java'
 }
 
-task test
 test.dependsOn(subprojects.test)
 
-task clean
 clean.dependsOn(subprojects.clean)
 
 task run
@@ -182,7 +182,6 @@ task copySubprojects(type: Copy) {
   into new File(rootProject.buildDir, distDir)
 }
 
-task build
 build.dependsOn(copySubprojects)
 
 // We need to start gralog as a jar because it uses some crazy
