--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,4 @@ include 'gralog-fx'
 include 'gralog-modal-logic'
 include 'gralog-modal-mu-calculus'
 include 'gralog-np-completeness'
-include 'JGraphTBridge'
+include 'gralog-jgrapht-bridge'
