external program pipe-in-able\n\nyou can write an external program to add and remove vertices from an open graph; very limited

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,4 @@ include 'gralog-modal-logic'
 include 'gralog-modal-mu-calculus'
 include 'gralog-np-completeness'
 include 'gralog-jgrapht-bridge'
+// include 'piping'
