--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,12 @@ defaultTasks 'run'
 
 apply plugin: 'java'
 
+
 subprojects {
-  repositories { mavenCentral() }
+  repositories {
+    mavenCentral()
+  }
+
   apply plugin: 'java'
 
   // Set up the style checker that checks indentation, naming
@@ -36,9 +40,12 @@ configure(subprojects.findAll {it.name != 'gralog-core'}) {
   }
 }
 
+//If you want to include libraries for every module, do it here
 subprojects {
   // All subprojects use junit and hamcrest for their tests.
   dependencies {
+    //includes all libraries found in the lib folder
+    compile fileTree(dir: "../lib", include: "*.jar")
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'junit:junit:4.12'
   }
