--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,5 @@ include 'gralog-modal-logic'
 include 'gralog-modal-mu-calculus'
 include 'gralog-np-completeness'
 include 'gralog-jgrapht-bridge'
+include 'gralog-dockfx'
+
