--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ subprojects {
   dependencies {
     //includes all libraries found in the lib folder
     compile fileTree(dir: "../lib", include: "*.jar")
+    compile 'org.reflections:reflections:0.9.11'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'junit:junit:4.12'
   }
