--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ subprojects {
     //includes all libraries found in the lib folder
     compile fileTree(dir: "../lib", include: "*.jar")
     compile 'org.reflections:reflections:0.9.11'
+    compile 'uk.com.robust-it:cloning:1.9.10'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
     testCompile 'junit:junit:4.12'
   }
