Require Java 10 SDK.
The code now requires Java 10, so this should be made explicit to
prevent obscure error messages.  This also works towards fixing the
broken Travis builds.

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 defaultTasks 'run'
 
 apply plugin: 'java'
-
+sourceCompatibility = 1.10
+targetCompatibility = 1.10
 
 subprojects {
   repositories {
