--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,5 @@
-#Fri Nov 11 17:38:47 CET 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk-10.jdk/Contents/Home
+distributionUrl=https\://services.gradle.org/distributions/gradle-4.10.2-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-4.6-all.zip
