--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,7 @@
-// Avoid cryptic errors by checking the Java version early.  Java 8 is
-// also the first JDK to include JavaFX, which we also need.
-if(!JavaVersion.current().isJava8Compatible())
+// Avoid cryptic errors by checking the Java version early. We need Java >= 10.
+if(!JavaVersion.current().isJava10Compatible())
   throw new GradleException(
-    'ERROR: To compile gralog, please install the Java Development Kit (JDK) 8 or later.')
+    'ERROR: To compile gralog, please install the Java Development Kit (JDK) 10 or later.')
 
 include 'gralog-automaton'
 include 'gralog-computation-tree-logic'
